# CmakeUtilities

./: .clang-format  .clang-format.in  .clang-tidy.in  .gitignore.in  .pre-commit-config.yaml.in  All.cmake  ArchitectureFlags.cmake  AsanFlags.cmake  BlasFlags.cmake  CMakeLists.txt  CMakePresets.json  CodeCoverageFlags.cmake  Common.cmake  Configurations.cmake  CudaFlags.cmake  DebugFlags.cmake  Flags.cmake  IncludeWhatYouUse.cmake  LapackFlags.cmake  MklFlags.cmake  OpenBlasFlags.cmake  OptimizationFlags.cmake  Options.cmake  README.md  SanitizerFlags.cmake  TargetUtilities.cmake  TsanFlags.cmake  UbsanFlags.cmake  Warnings.cmake  build.py.in  updateSubmodules.py
.github/workflows/: ci.yml
Example/: CMakeLists.txt  Main.cpp
Example/lib1/: CMakeLists.txt  StlDebugTests.cpp  lib1.cpp  lib1.h
Example/lib2/: AsanTests.cpp  CMakeLists.txt  lib2.cpp  lib2.h
Example/lib3/: CMakeLists.txt  UbsanTests.cpp  lib3.cpp  lib3.h
Example/lib4/: CMakeLists.txt  TsanTests.cpp  lib4.cpp  lib4.h
Example/lib5/: CMakeLists.txt  PerformanceTests.cpp  lib5.cpp  lib5.h
Example/lib6/: CMakeLists.txt  CoverageTests.cpp  lib6.cpp  lib6.h
Modules/: FindBLAS.cmake  FindLAPACK.cmake  FindMkl.cmake  FindOpenBLAS.cmake  FindValgrind.cmake
Utilities/: HasCudaGpu.c  IgnoreWarning.h
